updated index file

--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Datahash</title>
+        <title>Datahash GEC</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="./script.js" type="text/javascript"></script>
         <link rel="stylesheet" href="./style.css">
